Applied fix for mobile menu overflowing landscape

--- a/src/styles/modules/mobile-menu.less
+++ b/src/styles/modules/mobile-menu.less
@@ -100,6 +100,9 @@
                 float: right;
             }
         }
+        a {
+            padding: 12px;
+        }
     }
 }
 
